world-game/ObjectManager loading fixing